@@ -68,6 +68,8 @@ pypet 0.1b.4
 *   `log_stdout` parameter of the Environment determines if STDOUT and STDERROR will be logged
     to files. Can be disabled to allow better usage of pypet with interactive consoles.
 
+*   git commits only happen on changes and not all the time
+
 
 
 pypet 0.1b.3
